# SPDX-FileCopyrightText: 2021 Katie Mulliken <katie@mulliken.net>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ha-wyzeapi"
version = "0.1.36rc2"
description = "A Home Assistant integration for Wyze devices"
authors = [{ name = "Katie Mulliken", email = "katie@mulliken.net" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.13.2,<3.14"

dependencies = [
    "homeassistant>=2025.5.0",
    "wyzeapy>=0.5.31rc1,<0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
