# SPDX-FileCopyrightText: 2021 Katie Mulliken <katie@mulliken.net>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ha-wyzeapi"
version = "0.1.38"
description = "A Home Assistant integration for Wyze devices"
authors = [{ name = "Katie Mulliken", email = "katie@mulliken.net" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.13.2,<3.14"

dependencies = [
    "homeassistant>=2026.1.0",
    "wyzeapy>=0.6.1,<0.7.0",
    "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[dependency-groups]
dev = [
    "aiousbwatcher==1.1.1",
    "pyserial==3.5",
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "ruff>=0.12.1",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
